# nvm-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CROSS-COMPILE.md  Cargo.toml  FEATURE_COMPARISON.md  INSTALLATION.md  INSTALLER_SUMMARY.md  LICENSE  MIGRATION_PLAN.md  Makefile  PATH_STRUCTURE.md  README.md  RELEASE_NOTES_v0.5.0.md  SESSION_SUMMARY_v0.2.0.md  TESTING.md  TEST_PLAN_v0.3.0.md  TEST_REPORT.md  TEST_RESULTS_v0.3.0.md  VERSION.md  install.ps1  install.sh  test_out.txt  test_output.txt  uninstall.sh
_docs/: ANALYSIS_SUMMARY.md  FEATURE_COMPARISON.md  MIGRATION_PLAN.md  PLAN_v0.4.0.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  SESSION_SUMMARY_v0.2.0.md  v0.2.0_SUMMARY.md
_docs/_old/: .gitignore  Cargo.toml  README.md
docs/: CHANGELOG.md  DOCTOR_COMMAND.md  MACOS_APPLE_SILICON.md  QUICK_RELEASE.md  README.md  RELEASE_NOTES_v0.5.1.md
locales/: en.yaml  es.yaml
release-builds/: CHECKSUMS.sha256  manifest.json  nvm-v0.5.1-linux-x64  nvm-v0.5.1-macos-arm64
release-builds/v0.6.0/: CHECKSUMS.sha256  nvm-v0.6.0-macos-aarch64  nvm-v0.6.0-macos-x64
release-builds/v0.6.1/: CHECKSUMS.sha256  nvm-v0.6.1-macos-aarch64  nvm-v0.6.1-macos-x64
scripts/: BUILD_GUIDE.md  README.md  build.bat  build.sh  cross-compile.ps1  install.ps1  install.sh  setup-linux-build-env.sh  uninstall.ps1
scripts/install/: README.md  debug-api.sh  install.ps1  install.sh
scripts/release/: README.md  publish-release.ps1  validate-release.ps1
src/: config.rs  error.rs  i18n.rs  main.rs  utils.rs  versions.rs
src/commands/: alias.rs  doctor.rs  install.rs  list.rs  misc.rs  mod.rs  self_management.rs  stats.rs  uninstall.rs  use_version.rs
src/core/: aliases.rs  cache.rs  detection.rs  download.rs  extract.rs  github.rs  mod.rs  (+3 more)
(+24 files in other folders)
